[package]
name = "launcherlib"
version = "0.1.0"
authors = ["apersomany <apersoaltps@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
serde-xml-rs = "0.4.1"
# scraper = "0.12.0"
zip = "0.5.12"
maplit = "1.0.2"
futures = "0.3.15"
tokio = { version = "1.6.0", features = ["fs", "process"] }
reqwest = { version = "0.11.3", features = ["json"] }